--- a/src/html/prodeti.topmonks.cz/index.html
+++ b/src/html/prodeti.topmonks.cz/index.html
@@ -118,9 +118,10 @@
           <h1>Kurz programování pro děti</h1>
           <ul>
             <li>pro děti od 7 do 12 let</li>
-            <li>celý kurz trvá 3 týdny</li>
+            <li>celý kurz trvá 4 týdny</li>
             <li>individuální přístup k dětem</li>
-            <li>děti se naučí spolupráci</li>
+            <li>děti se naučí komunikaci a spolupráci</li>
+            <li>vstup dětí do světa IT zábavnou formou hry</li>
           </ul>
           <br>
           <a href="#kontakt" class="button">Mám zájem o kurz</a>
@@ -136,7 +137,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Co naučíme vaše děti?</h2>
-          <p class="description">Kurz programování se skládá ze tří lekcí trvajících hodinu a půl.</p>
+          <p class="description">Kurz programování se skládá ze čtyř lekcí trvajících hodinu a půl.</p>
         </div>
       </div>
     </div>
@@ -147,22 +148,20 @@
         <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Tvoříme hru</h3>
           <h4>Hour of code</h4>
-          <p>Formou jednoduchých úkolů společně s dětmi naprogramujeme funkční počítačovou hru. Lekce se
+          <p>Zábavnou a hravou formou jednoduchých úkolů společně s dětmi naprogramujeme funkční počítačovou hru. Lekce se
             věnuje úvodu do světa programování a základům algoritmizace.</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
         <div class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Robot Edison I</h3>
           <h4>Úvod</h4>
-          <p>Pomocí robota Edison si děti vyzkouší z virtuálního světa ovládat ten reálný. Skládáním
-            obrázkových bloků dávají děti robotům příkazy, v jakém směru se mají pohybovat.</p>
+          <p>Pomocí robota Edison si děti vyzkouší z virtuálního světa ovládat ten reálný. Důmyslným skládáním obrázkových bloků dávají děti robotům příkazy, v jakém směru se mají pohybovat.</p>
           <a href="#robot-edison-i" class="button">Více info</a>
         </div>
         <div class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <h3>Robot Edison II</h3>
           <h4>Pokročilé</h4>
-          <p>V posledním kurzu se děti učí další možnosti ovládání robota a jsou postaveny před reálný
-            problém autonomní přepravy osob ve městě. Děti se učí i kolaboraci a kritickému myšlení.</p>
+          <p>V posledním kurzu se děti učí další možnosti ovládání robota a jsou postaveny před reálný problém autonomní přepravy osob ve městě. Děti se učí i kolaboraci a kritickému myšlení pomocí hry.</p>
           <a href="#robot-edison-ii" class="button">Více info</a>
         </div>
       </div>
@@ -187,10 +186,10 @@
           <form class="mdc-layout-grid__inner email_form"
                 action="https://topmonks.us12.list-manage.com/subscribe/post?u=3a1d5081e16aac38b8d212eac&amp;id=3dfcb7600a"
                 method="post" target="_blank">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-desktop">
               <input type="email" name="EMAIL" placeholder="vas@email.cz">
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
               <button>Odeslat</button>
             </div>
           </form>
@@ -240,7 +239,7 @@
         <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <img src="/images/prodeti/robotEdison.png">
         </div>
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--order-2">
+        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <img src="/images/prodeti/robotEdison2.png">
         </div>
         <div id="robot-edison-ii"
@@ -333,8 +332,46 @@
                   </div>
                 </div>
               </div>
+              <div class="slide">
+                <div class="inner-container">
+                  <div class="photo">
+                    <img src="/images/prodeti/rodice/anicka.jpg" alt=" [fotografie] Anna Cihlová">
+                  </div>
+                  <blockquote class="description">
+                    <p>Jsem jedna z mála žen, která se vrhla do oboru IT, proto v tom podporuji i svoji neteř Emmu. Přihlásila jsem ji do Kurzu pro děti a byla jsem nadšená z její pozitivní reakce. Za hodinu a půl se skvěle zapojila do kolektivu formou hry a seznámila se s robůtky, které mohla také ovládat. Dál ji k tomu povedu a moc se obě těšíme na další kurzy!</p>
+                  </blockquote>
+                  <div class="name">
+                    Anna Cihlová
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="inner-container">
+                  <div class="photo">
+                    <img src="/images/prodeti/rodice/prema.jpg" alt=" [fotografie] Přemysl Novák">
+                  </div>
+                  <blockquote class="description">
+                    <p></p>
+                  </blockquote>
+                  <div class="name">
+                    Přemysl Novák
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="Cena" class="price">
+    <div class="mdc-layout-grid wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Cena kurzu</h2>
+         <p>Cena za 4 kurzy: 25 000 Kč</p>
+          <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
         </div>
       </div>
     </div>
@@ -346,7 +383,8 @@
           <h2>Kontakt</h2>
           <p class="description">Přejete si objednat kurz do své firmy? Máte otázky? Napište nám.</p>
           <div style="margin: 0 auto; text-align: center">
-            <a class="mail" href="mailto:info@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">info@topmonks.com</a>
+            <a class="mail" href="mailto:jiri.penzes@topmonks.com&amp;subject=Programov%C3%A1n%C3%AD%20pro%20d%C4%9Bti">jiri.penzes@topmonks.com</a><br>
+            <a href="tel:732364404">+420 732 364 404</a>
           </div>
         </div>
 
