TOPMONKS.COM: Case studies - section

--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -152,32 +152,44 @@
 <section class="studies">
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="studies_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Case studies</h2>
         <p>We have learned something from every collaboration with our clients.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/sporka.jpg">
         <h3>Česká spořitelna</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/pricefx.jpg">
         <h3>PriceFX</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/purposefly.jpg">
         <h3>PurposeFly</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/hearth.jpg">
         <h3>Hearth.net</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/techloop.jpg">
         <h3>Techloop.io</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
+        <img src="/images/topmonks.com/europe.jpg">
         <h3>GoRealEurope.com</h3>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
     </div>
