topmonks.com: Our costumers + Contact sections

--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -205,8 +205,10 @@
           <p>Working with TopMonks was really awesome. Working with TopMonks was really awesome.
             Working with TopMonks was absolutely awesome.</p>
         </blockquote>
-        <p>Jan Sechovec</p>
-        <p>Universal Digital Punker</p>
+        <div class="name">
+          Jan Sechovec<br>
+          Universal Digital Punker
+        </div>
       </div>
     </div>
   </div>
@@ -215,9 +217,27 @@
 <section class="contact">
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Contact</h2>
         <p>Do you have any questions? Are you interested in working with us? Contact us.</p>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="photo">
+          <img>
+        </div>
+        <h4>Kristýna Sloupová</h4>
+        <p>Senior Key Account Manager</p>
+        <a class="mail" href="mailto:kristyna.sloupova@topmonks.com">kristyna.sloupova@topmonks.com</a>
+        <a class="phone" href="tel:+420733713555">+ 420 733 713 555</a>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="photo">
+          <img>
+        </div>
+        <h4>Ladislav Gerencséry</h4>
+        <p>Sales Account Manager</p>
+        <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a>
+        <a class="phone" href="tel:+420606637915">+420 606 637 915</a>
       </div>
     </div>
   </div>
