--- a/src/html/prodeti.topmonks.cz/index.html
+++ b/src/html/prodeti.topmonks.cz/index.html
@@ -145,23 +145,35 @@
   <section id="courses" class="courses">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Tvoříme hru</h3>
-          <h4>Hour of code</h4>
-          <p>Zábavnou a hravou formou jednoduchých úkolů společně s dětmi naprogramujeme funkční počítačovou hru. Lekce se
-            věnuje úvodu do světa programování a základům algoritmizace.</p>
+          <h4>Úvod</h4>
+          <p>Zábavnou a hravou formou jednoduchých úkolů společně s&nbsp;dětmi
+            naprogramujeme funkční počítačovou hru. Lekce se věnuje úvodu do světa
+            programování a základům algoritmizace.</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
-        <div class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
+          <h3>Tvoříme hru</h3>
+          <h4>Pokročilé</h4>
+          <p>Hlavní náplní bude naprogramovat jemně pokročilejší funkční počítačovou hru, kde ukážeme nové programovací
+            kódy. Děti budou mít volnou ruku a využijí svojí kreativitu a představivost.</p>
+          <a href="#tvorime-hru" class="button">Více info</a>
+        </div>
+        <div class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Robot Edison I</h3>
           <h4>Úvod</h4>
-          <p>Pomocí robota Edison si děti vyzkouší z virtuálního světa ovládat ten reálný. Důmyslným skládáním obrázkových bloků dávají děti robotům příkazy, v jakém směru se mají pohybovat.</p>
+          <p>Pomocí robota Edison si děti vyzkouší z&nbsp;virtuálního světa ovládat
+            ten reálný. Důmyslným skládáním obrázkových bloků dávají děti
+            robotům příkazy, v&nbsp;jakém směru se mají pohybovat.</p>
           <a href="#robot-edison-i" class="button">Více info</a>
         </div>
-        <div class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="fill_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Robot Edison II</h3>
           <h4>Pokročilé</h4>
-          <p>V posledním kurzu se děti učí další možnosti ovládání robota a jsou postaveny před reálný problém autonomní přepravy osob ve městě. Děti se učí i kolaboraci a kritickému myšlení pomocí hry.</p>
+          <p>V&nbsp;posledním kurzu se děti učí další možnosti ovládání robota a
+            jsou postaveny před reálný problém autonomní přepravy osob ve městě.
+            Děti se učí i&nbsp;kolaboraci a kritickému myšlení pomocí&nbsp;hry.</p>
           <a href="#robot-edison-ii" class="button">Více info</a>
         </div>
       </div>
@@ -186,10 +198,12 @@
           <form class="mdc-layout-grid__inner email_form"
                 action="https://topmonks.us12.list-manage.com/subscribe/post?u=3a1d5081e16aac38b8d212eac&amp;id=3dfcb7600a"
                 method="post" target="_blank">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-8-desktop">
               <input type="email" name="EMAIL" placeholder="vas@email.cz">
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
+            <div
+              class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-desktop">
               <button>Odeslat</button>
             </div>
           </form>
@@ -209,11 +223,11 @@
             individuálně. Kurzy rozvíjí logické a kritické myšlení a učí děti pracovat v týmech.</p>
         </div>
 
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <img src="/images/prodeti/tvorimeHru.png">
         </div>
 
-        <div id="tvorime-hru" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div id="tvorime-hru" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Tvoříme hru</h3>
           <p>První lekce se věnuje úvodu do světa programování. Rovnou do toho skočíme i&nbsp;prakticky a děti
             si vyzkouší naprogramovat vlastní počítačovou&nbsp;hru.</p>
@@ -223,8 +237,21 @@
 
           <p>Děti si z&nbsp;první lekce odnesou především základy algoritmizace a vlastnoručně vytvořenou funkční&nbsp;hru.</p>
         </div>
+        <div id="tvorime-hru-ii" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <h3>Tvoříme hru</h3>
+          <p>Druhá lekce se věnuje pokročilejšímu programování. Rovnou do toho skočíme i&nbsp;prakticky a děti
+            si vyzkouší naprogramovat vlastní počítačovou&nbsp;hru.</p>
 
-        <div id="robot-edison-i" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <p>Jednoduché plošinové hry programujeme pomocí skládání bloků. Lekce samotná je koncipována jako
+            hra. Formou jednoduchých úkolů děti postupně budují vlastní hru a otevírají si postupně další možnosti.</p>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <img src="/images/prodeti/tvorimeHru.png">
+        </div>
+        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <img src="/images/prodeti/robotEdison.png">
+        </div>
+        <div id="robot-edison-i" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Robot Edison I</h3>
           <p>Na úvodní lekci se děti seznámí s&nbsp;roboty Edison a zkusí si ze světa virtuálního ovládat ten
             reálný. Budou řešit jednoduché úlohy, během kterých se naučí ovládat robota pomocí programovacího jazyka
@@ -236,20 +263,17 @@
           <p>Například jeď vpřed, otoč se, rozsviť světla, zastav se před překážkou atd. Úlohy v&nbsp;tomto
             kurzu jsou sestaveny tak, aby dětem postupně odhalovali jednotlivé možnosti robota.</p>
         </div>
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <img src="/images/prodeti/robotEdison.png">
-        </div>
-        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-          <img src="/images/prodeti/robotEdison2.png">
-        </div>
-        <div id="robot-edison-ii"
-             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--order-1">
+
+        <div id="robot-edison-ii" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Robot Edison II</h3>
           <p>Děti už z&nbsp;minulé lekce umí robota rozpohybovat a projet s&nbsp;ním předem připravenou trať.
             Dokonce umí program upravit tak, aby se robot choval autonomně, což je stěžejní pro tuto pokročilou&nbsp;lekci.</p>
 
           <p>V&nbsp;této navazující lekci naznačíme další potenciál programování robotů Edison. Děti si pak
             musí poradit s&nbsp;reálným problémem autonomní přepravy osob ve&nbsp;městě.</p>
+        </div>
+        <div class="pics mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop">
+          <img src="/images/prodeti/robotEdison2.png">
         </div>
       </div>
     </div>
@@ -338,7 +362,11 @@
                     <img src="/images/prodeti/rodice/anicka.jpg" alt=" [fotografie] Anna Cihlová">
                   </div>
                   <blockquote class="description">
-                    <p>Jsem jedna z mála žen, která se vrhla do oboru IT, proto v tom podporuji i svoji neteř Emmu. Přihlásila jsem ji do Kurzu pro děti a byla jsem nadšená z její pozitivní reakce. Za hodinu a půl se skvěle zapojila do kolektivu formou hry a seznámila se s robůtky, které mohla také ovládat. Dál ji k tomu povedu a moc se obě těšíme na další kurzy!</p>
+                    <p>Jsem jedna z&nbsp;mála žen, která se vrhla do oboru IT, proto v&nbsp;tom podporuji
+                      i&nbsp;svoji neteř Emmu. Přihlásila jsem ji do Kurzu pro děti a byla jsem
+                      nadšená z&nbsp;její pozitivní reakce. Za hodinu a půl se skvěle zapojila do
+                      kolektivu formou hry a seznámila se se základními programovacími kódy. Dál
+                      ji k&nbsp;tomu povedu a moc se obě těšíme na další&nbsp;kurzy!</p>
                   </blockquote>
                   <div class="name">
                     Anna Cihlová
@@ -351,7 +379,10 @@
                     <img src="/images/prodeti/rodice/prema.jpg" alt=" [fotografie] Přemysl Novák">
                   </div>
                   <blockquote class="description">
-                    <p></p>
+                    <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
+                      Děti jsou nenuceným způsobem seznámeni s&nbsp;kódy a výpočetními technikami,
+                      které do IT patří. Syna to moc bavilo, a proto byl celý kurz aktivní a
+                      zároveň soustředěný. Hodně si z&nbsp;toho odnesl.</p>
                   </blockquote>
                   <div class="name">
                     Přemysl Novák
@@ -370,7 +401,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Cena kurzu</h2>
-         <p>Cena za 4 kurzy: 25 000 Kč</p>
+          <p>Cena za 4 kurzy: 25 000 Kč</p>
           <p>Kurz obsahuje 4 lekce ve 4 týdnech po 1.5 hodině</p>
         </div>
       </div>
