--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -22,28 +22,28 @@
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <article class="listen">
+        <div class="box listen">
           <h3>We listen</h3>
           <p>We see the time devoted to your project as an investment into your future.
             We listen to your ideas and needs and think about the best solution to do the project right the first
             time.</p>
-        </article>
+        </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <article class="develop">
+        <div class="box develop">
           <h3>We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations.
             We’ll provide you with a great team of senior developers who are ready to work immediately.</p>
-        </article>
+        </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <article class="verify">
+        <div class="box verify">
           <h3>We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the project.
             We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
             by.</p>
-        </article>
+        </div>
       </div>
     </div>
   </div>
@@ -154,42 +154,36 @@
     <div class="mdc-layout-grid__inner">
       <div class="studies_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Case studies</h2>
-        <p>We have learned something from every collaboration with our clients.</p>
+        <p class="sub-text">We have learned something from every collaboration with our clients.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/sporka.jpg">
         <h3>Česká spořitelna</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/pricefx.jpg">
         <h3>PriceFX</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/purposefly.jpg">
         <h3>PurposeFly</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/hearth.jpg">
         <h3>Hearth.net</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/techloop.jpg">
         <h3>Techloop.io</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <img src="/images/topmonks.com/europe.jpg">
         <h3>GoRealEurope.com</h3>
-        <hr>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
       </div>
     </div>
