blockquote in main.css

--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -14,15 +14,17 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
 
         <h1>Team as a service</h1>
-        <blockquote>
-          <p>And they are perfectionists. Ask them to build you a product,
-            and they will not give you what you asked for. They will give you what you want</p>
-        </blockquote>
-        <a class="action-button">How we work</a>
+        <div class="box">
+          <blockquote>
+            And they are perfectionists. Ask them to build you a product,
+              and they will not give you what you asked for. They will give you what you want
+          </blockquote>
+          <a class="action-button">How we work</a>
+        </div>
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <div class="box listen">
+        <div class="teambox listen">
           <h3>We listen</h3>
           <p>We see the time devoted to your project as an investment into your future.
             We listen to your ideas and needs and think about the best solution to do the project right the first
@@ -30,7 +32,7 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <div class="box develop">
+        <div class="teambox develop">
           <h3>We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations.
@@ -38,7 +40,7 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
-        <div class="box verify">
+        <div class="teambox verify">
           <h3>We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the project.
             We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
