--- a/src/html/www.topmonks.com/index.html
+++ b/src/html/www.topmonks.com/index.html
@@ -8,19 +8,44 @@
 
 {% block content %}
 
+<header>
+  <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <img src="/images/topmonks.com/monk.svg">
+        <a class="pure-menu-heading menu-brand-logo active" href="/" title="Go to homepage">TopMonks </a>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <nav id="navigation" class="pure-menu pure-menu-horizontal menu-can-transform">
+          <ul class="pure-menu-list">
+            <li style="width: 166px" class="pure-menu-item"><a href="https://studio.topmonks.com/"
+                                                               class="pure-menu-link">startup studio</a></li>
+            <li style="width: 108px" class="pure-menu-item"><a href="/company-values/" class="pure-menu-link">about
+              us</a></li>
+            <li style="width: 98px" class="pure-menu-item"><a href="/community/" class="pure-menu-link">meet us</a></li>
+            <li style="width: 104px" class="pure-menu-item"><a href="/contact/" class="pure-menu-link">contacts</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
+</header>
 <section class="main_info">
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-
-        <h1>Team as a service</h1>
-        <blockquote>
-          <p>And they are perfectionists. Ask them to build you a product,
-            and they will not give you what you asked for. They will give you what you want</p>
-        </blockquote>
-        <a class="action-button">How we work</a>
+        <div class="service">
+          <h2>Team as a service</h2>
+          <blockquote>
+            <p>And they are perfectionists. Ask them to build you a product, and they will
+              not give you what you asked for. They will give you what you&nbsp;want.</p>
+          </blockquote>
+          <a class="action-button">How we work</a>
+        </div>
       </div>
-
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <p>TOPMONKS</p>
+      </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-desktop">
         <div class="box listen">
           <h3>We listen</h3>
@@ -52,17 +77,17 @@
 <section class="cooperation">
   <div class="mdc-layout-grid wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>You will love working with us</h2>
         <p>Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
           and gives us the ability to apply various technology solutions, whether they are old or new.</p>
       </div>
       <div
-        class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        class="white white-first mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We will bring start-up playfulness and a fresh point of view to your project.</p>
       </div>
       <div
-        class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        class="white white-second mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We will guide you through and help you understand the world of IT.</p>
       </div>
 
@@ -76,11 +101,11 @@
       </div>
 
       <div
-        class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        class="white white-third mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We are open and fair. We keep our promises.</p>
       </div>
       <div
-        class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+        class="white white-fourth mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We can anticipate and minimize the risks associated with technical IT solutions.</p>
       </div>
 
@@ -88,39 +113,41 @@
         class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We keep educating ourselves, you, and your children.</p>
       </div>
-      <div class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6">
+      <div
+        class="purple mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
         <p>We think in the context of your business. With our help, your product will make sense to your end
           users.</p>
       </div>
     </div>
   </div>
-  <div class="product">
+</section>
+  <section class="product">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div
-          class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          class="research mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Research</h3>
-          <p>blablablabla</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
         </div>
         <div
-          class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          class="design mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Design</h3>
-          <p>blablablabla</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
         </div>
         <div
-          class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          class="develop mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Development</h3>
-          <p>blablablabla</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
         </div>
         <div
-          class="white mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
+          class="sales mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-6-desktop">
           <h3>Sales</h3>
-          <p>blablablabla</p>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque porta. Itaque earum rerum hic.</p>
         </div>
       </div>
     </div>
-  </div>
-  <div class="partners">
+  </section>
+  <section class="partners">
     <div class="mdc-layout-grid wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -146,7 +173,6 @@
         </div>
       </div>
     </div>
-  </div>
 </section>
 
 <section class="studies">
@@ -223,7 +249,8 @@
         <p>Senior Key Account Manager</p>
         <a class="mail" href="mailto:kristyna.sloupova@topmonks.com">kristyna.sloupova@topmonks.com</a><br>
         <a class="phone" href="tel:+420733713555">+ 420 733 713 555</a><br>
-        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs" class="linkedin">
+        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
+           class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -232,7 +259,8 @@
                   <g transform="translate(135.000000, 248.000000)">
                     <g transform="translate(956.000000, 0.000000)">
                       <g>
-                        <path d="M10.5595736,7.40102228 C9.20574962,7.3958377 8.47601969,7.8634222 8.21549443,8.65374694 C7.92677801,9.52896921 8.29034684,10.470943 9.07807929,10.889274 C9.97760429,11.3669036 11.2364856,11.139106 11.7948003,10.3844253 C12.2500714,9.76875614 12.2921962,9.09411239 11.9655675,8.4191446 C11.6094515,7.68228586 10.9597586,7.40620686 10.5595736,7.40102228 L10.5595736,7.40102228 Z M8.36422713,23.4806797 L11.9027044,23.4806797 L11.9027044,12.6640212 L8.36422713,12.6640212 L8.36422713,23.4806797 Z M17.5558432,23.4810038 L17.5558432,23.0902159 C17.5561672,21.1515062 17.5619999,19.2131206 17.5529269,17.2747349 C17.5503346,16.7478518 17.7172133,16.2945249 18.0516189,15.9021168 C18.5571156,15.3088062 19.210697,15.1140603 19.9624614,15.2618209 C20.7032086,15.4069892 21.0842754,15.9247994 21.2381927,16.6182372 C21.3204979,16.9886108 21.3648909,17.3748622 21.3674832,17.7543088 C21.3807687,19.5303522 21.3736399,21.3063956 21.3736399,23.082439 L21.3736399,23.4754952 L24.9435487,23.4754952 C24.9493814,23.35787 24.9574823,23.2658436 24.9574823,23.1738173 C24.9578063,21.1890944 24.9681755,19.2040476 24.9500294,17.2193247 C24.9451689,16.6892012 24.9046643,16.1483845 24.7912516,15.6321945 C24.4445327,14.0528412 23.5777353,12.8898746 21.9371391,12.5130203 C20.244049,12.1241766 18.7554259,12.4621466 17.6912904,13.9705359 C17.6679598,14.0032636 17.6368523,14.0304827 17.545474,14.1299618 L17.545474,12.6614289 L13.9619557,12.6614289 L13.9619557,23.4810038 L17.5558432,23.4810038 Z M0.0002,16.1943976 L0.0002,15.7767147 C0.0193181466,15.6052995 0.0507496758,15.4345323 0.0562582944,15.262793 C0.102595497,13.8516146 0.347242967,12.4728398 0.781127684,11.1329493 C3.35073621,3.19632617 11.3845703,-1.40725873 19.5204758,0.385958614 C27.635643,2.17431542 33.0894993,10.1310288 31.8157123,18.33563 C31.3397029,21.4003662 30.1323433,24.1520831 28.0478173,26.4527415 C23.940008,30.9863345 18.818937,32.7199291 12.8142188,31.6123728 C9.21611879,30.9487463 6.2291514,29.1098398 3.85007627,26.3250711 C1.85141986,23.9855284 0.62559022,21.283389 0.204666958,18.2290221 C0.111668516,17.5543783 0.066951495,16.8729298 0.0002,16.1943976 L0.0002,16.1943976 Z"></path>
+                        <path
+                          d="M10.5595736,7.40102228 C9.20574962,7.3958377 8.47601969,7.8634222 8.21549443,8.65374694 C7.92677801,9.52896921 8.29034684,10.470943 9.07807929,10.889274 C9.97760429,11.3669036 11.2364856,11.139106 11.7948003,10.3844253 C12.2500714,9.76875614 12.2921962,9.09411239 11.9655675,8.4191446 C11.6094515,7.68228586 10.9597586,7.40620686 10.5595736,7.40102228 L10.5595736,7.40102228 Z M8.36422713,23.4806797 L11.9027044,23.4806797 L11.9027044,12.6640212 L8.36422713,12.6640212 L8.36422713,23.4806797 Z M17.5558432,23.4810038 L17.5558432,23.0902159 C17.5561672,21.1515062 17.5619999,19.2131206 17.5529269,17.2747349 C17.5503346,16.7478518 17.7172133,16.2945249 18.0516189,15.9021168 C18.5571156,15.3088062 19.210697,15.1140603 19.9624614,15.2618209 C20.7032086,15.4069892 21.0842754,15.9247994 21.2381927,16.6182372 C21.3204979,16.9886108 21.3648909,17.3748622 21.3674832,17.7543088 C21.3807687,19.5303522 21.3736399,21.3063956 21.3736399,23.082439 L21.3736399,23.4754952 L24.9435487,23.4754952 C24.9493814,23.35787 24.9574823,23.2658436 24.9574823,23.1738173 C24.9578063,21.1890944 24.9681755,19.2040476 24.9500294,17.2193247 C24.9451689,16.6892012 24.9046643,16.1483845 24.7912516,15.6321945 C24.4445327,14.0528412 23.5777353,12.8898746 21.9371391,12.5130203 C20.244049,12.1241766 18.7554259,12.4621466 17.6912904,13.9705359 C17.6679598,14.0032636 17.6368523,14.0304827 17.545474,14.1299618 L17.545474,12.6614289 L13.9619557,12.6614289 L13.9619557,23.4810038 L17.5558432,23.4810038 Z M0.0002,16.1943976 L0.0002,15.7767147 C0.0193181466,15.6052995 0.0507496758,15.4345323 0.0562582944,15.262793 C0.102595497,13.8516146 0.347242967,12.4728398 0.781127684,11.1329493 C3.35073621,3.19632617 11.3845703,-1.40725873 19.5204758,0.385958614 C27.635643,2.17431542 33.0894993,10.1310288 31.8157123,18.33563 C31.3397029,21.4003662 30.1323433,24.1520831 28.0478173,26.4527415 C23.940008,30.9863345 18.818937,32.7199291 12.8142188,31.6123728 C9.21611879,30.9487463 6.2291514,29.1098398 3.85007627,26.3250711 C1.85141986,23.9855284 0.62559022,21.283389 0.204666958,18.2290221 C0.111668516,17.5543783 0.066951495,16.8729298 0.0002,16.1943976 L0.0002,16.1943976 Z"></path>
                       </g>
                     </g>
                   </g>
@@ -251,7 +279,8 @@
         <p>Sales Account Manager</p>
         <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a><br>
         <a class="phone" href="tel:+420606637915">+420 606 637 915</a><br>
-        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs" class="linkedin">
+        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
+           class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -260,7 +289,8 @@
                   <g transform="translate(135.000000, 248.000000)">
                     <g transform="translate(956.000000, 0.000000)">
                       <g>
-                        <path d="M10.5595736,7.40102228 C9.20574962,7.3958377 8.47601969,7.8634222 8.21549443,8.65374694 C7.92677801,9.52896921 8.29034684,10.470943 9.07807929,10.889274 C9.97760429,11.3669036 11.2364856,11.139106 11.7948003,10.3844253 C12.2500714,9.76875614 12.2921962,9.09411239 11.9655675,8.4191446 C11.6094515,7.68228586 10.9597586,7.40620686 10.5595736,7.40102228 L10.5595736,7.40102228 Z M8.36422713,23.4806797 L11.9027044,23.4806797 L11.9027044,12.6640212 L8.36422713,12.6640212 L8.36422713,23.4806797 Z M17.5558432,23.4810038 L17.5558432,23.0902159 C17.5561672,21.1515062 17.5619999,19.2131206 17.5529269,17.2747349 C17.5503346,16.7478518 17.7172133,16.2945249 18.0516189,15.9021168 C18.5571156,15.3088062 19.210697,15.1140603 19.9624614,15.2618209 C20.7032086,15.4069892 21.0842754,15.9247994 21.2381927,16.6182372 C21.3204979,16.9886108 21.3648909,17.3748622 21.3674832,17.7543088 C21.3807687,19.5303522 21.3736399,21.3063956 21.3736399,23.082439 L21.3736399,23.4754952 L24.9435487,23.4754952 C24.9493814,23.35787 24.9574823,23.2658436 24.9574823,23.1738173 C24.9578063,21.1890944 24.9681755,19.2040476 24.9500294,17.2193247 C24.9451689,16.6892012 24.9046643,16.1483845 24.7912516,15.6321945 C24.4445327,14.0528412 23.5777353,12.8898746 21.9371391,12.5130203 C20.244049,12.1241766 18.7554259,12.4621466 17.6912904,13.9705359 C17.6679598,14.0032636 17.6368523,14.0304827 17.545474,14.1299618 L17.545474,12.6614289 L13.9619557,12.6614289 L13.9619557,23.4810038 L17.5558432,23.4810038 Z M0.0002,16.1943976 L0.0002,15.7767147 C0.0193181466,15.6052995 0.0507496758,15.4345323 0.0562582944,15.262793 C0.102595497,13.8516146 0.347242967,12.4728398 0.781127684,11.1329493 C3.35073621,3.19632617 11.3845703,-1.40725873 19.5204758,0.385958614 C27.635643,2.17431542 33.0894993,10.1310288 31.8157123,18.33563 C31.3397029,21.4003662 30.1323433,24.1520831 28.0478173,26.4527415 C23.940008,30.9863345 18.818937,32.7199291 12.8142188,31.6123728 C9.21611879,30.9487463 6.2291514,29.1098398 3.85007627,26.3250711 C1.85141986,23.9855284 0.62559022,21.283389 0.204666958,18.2290221 C0.111668516,17.5543783 0.066951495,16.8729298 0.0002,16.1943976 L0.0002,16.1943976 Z"></path>
+                        <path
+                          d="M10.5595736,7.40102228 C9.20574962,7.3958377 8.47601969,7.8634222 8.21549443,8.65374694 C7.92677801,9.52896921 8.29034684,10.470943 9.07807929,10.889274 C9.97760429,11.3669036 11.2364856,11.139106 11.7948003,10.3844253 C12.2500714,9.76875614 12.2921962,9.09411239 11.9655675,8.4191446 C11.6094515,7.68228586 10.9597586,7.40620686 10.5595736,7.40102228 L10.5595736,7.40102228 Z M8.36422713,23.4806797 L11.9027044,23.4806797 L11.9027044,12.6640212 L8.36422713,12.6640212 L8.36422713,23.4806797 Z M17.5558432,23.4810038 L17.5558432,23.0902159 C17.5561672,21.1515062 17.5619999,19.2131206 17.5529269,17.2747349 C17.5503346,16.7478518 17.7172133,16.2945249 18.0516189,15.9021168 C18.5571156,15.3088062 19.210697,15.1140603 19.9624614,15.2618209 C20.7032086,15.4069892 21.0842754,15.9247994 21.2381927,16.6182372 C21.3204979,16.9886108 21.3648909,17.3748622 21.3674832,17.7543088 C21.3807687,19.5303522 21.3736399,21.3063956 21.3736399,23.082439 L21.3736399,23.4754952 L24.9435487,23.4754952 C24.9493814,23.35787 24.9574823,23.2658436 24.9574823,23.1738173 C24.9578063,21.1890944 24.9681755,19.2040476 24.9500294,17.2193247 C24.9451689,16.6892012 24.9046643,16.1483845 24.7912516,15.6321945 C24.4445327,14.0528412 23.5777353,12.8898746 21.9371391,12.5130203 C20.244049,12.1241766 18.7554259,12.4621466 17.6912904,13.9705359 C17.6679598,14.0032636 17.6368523,14.0304827 17.545474,14.1299618 L17.545474,12.6614289 L13.9619557,12.6614289 L13.9619557,23.4810038 L17.5558432,23.4810038 Z M0.0002,16.1943976 L0.0002,15.7767147 C0.0193181466,15.6052995 0.0507496758,15.4345323 0.0562582944,15.262793 C0.102595497,13.8516146 0.347242967,12.4728398 0.781127684,11.1329493 C3.35073621,3.19632617 11.3845703,-1.40725873 19.5204758,0.385958614 C27.635643,2.17431542 33.0894993,10.1310288 31.8157123,18.33563 C31.3397029,21.4003662 30.1323433,24.1520831 28.0478173,26.4527415 C23.940008,30.9863345 18.818937,32.7199291 12.8142188,31.6123728 C9.21611879,30.9487463 6.2291514,29.1098398 3.85007627,26.3250711 C1.85141986,23.9855284 0.62559022,21.283389 0.204666958,18.2290221 C0.111668516,17.5543783 0.066951495,16.8729298 0.0002,16.1943976 L0.0002,16.1943976 Z"></path>
                       </g>
                     </g>
                   </g>
