--- a/src/html/prodeti.topmonks.cz/index.html
+++ b/src/html/prodeti.topmonks.cz/index.html
@@ -147,17 +147,18 @@
       <div class="mdc-layout-grid__inner">
         <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Tvoříme hru</h3>
-          <h4>Úvod</h4>
-          <p>Zábavnou a hravou formou jednoduchých úkolů společně s&nbsp;dětmi
-            naprogramujeme funkční počítačovou hru. Lekce se věnuje úvodu do světa
-            programování a základům algoritmizace.</p>
+          <h4>Základy</h4>
+          <p>První lekce se věnuje zejména úvodu do světa programování a základům
+            algoritmizace. Formou jednoduchých úkolů společně s&nbsp;dětmi začneme
+            programovat funkční a zábavnou počítačovou&nbsp;hru.</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
         <div class="fill_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
           <h3>Tvoříme hru</h3>
-          <h4>Pokročilé</h4>
-          <p>Hlavní náplní bude naprogramovat jemně pokročilejší funkční počítačovou hru, kde ukážeme nové programovací
-            kódy. Děti budou mít volnou ruku a využijí svojí kreativitu a představivost.</p>
+          <h4>Hours of Code</h4>
+          <p>Druhá lekce navazuje na první a pokračujeme v&nbsp;tvorbě her. Přidáváme
+            pokročilejší prvky a snažíme se vytvořit komplexní hru. Učíme se
+            počítat skóre, ovládácí prvky, zvuk,&nbsp;…</p>
           <a href="#tvorime-hru" class="button">Více info</a>
         </div>
         <div class="fill_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-3-desktop">
@@ -285,7 +286,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Fotogalerie</h2>
           <p class="description">Fotky pořízeny z prvního a druhého kurzu pro děti</p>
-          <div class="mdc-layout-grid__inner">
+          <div class="fotky mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell"><img src="/images/prodeti/galerie/foto-1.jpg" alt="" width="300"></div>
             <div class="mdc-layout-grid__cell"><img src="/images/prodeti/galerie/foto-2.jpg" alt="" width="300"></div>
             <div class="mdc-layout-grid__cell"><img src="/images/prodeti/galerie/foto-3.jpg" alt="" width="300"></div>
